log
Wed 10 May 2023 06:04:53 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  0|0
81945f8
Wed 10 May 2023 06:06:16 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
5b23897
Wed 10 May 2023 06:06:49 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
3a72a76
Wed 10 May 2023 06:09:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: expected expression before ‘]’ token
   56 |   mapa->buckets[] = NULL;
      |                 ^
Compilation failed
78ca720
Wed 10 May 2023 06:23:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: expected expression before ‘]’ token
   56 |   mapa->buckets[] = {NULL};
      |                 ^
Compilation failed
a2f1da5
Wed 10 May 2023 06:23:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
612fd0e
Wed 10 May 2023 06:23:47 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b566122
Wed 10 May 2023 06:24:43 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   56 |   mapa->buckets = (Pair *)malloc(sizeof(Pair));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
38bd250
Wed 10 May 2023 06:25:12 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:3: error: conversion to non-scalar type requested
   56 |   mapa->buckets = (Pair )malloc(sizeof(Pair));
      |   ^~~~
Compilation failed
1469d91
Wed 10 May 2023 06:25:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:56:17: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   56 |   mapa->buckets = (Pair *)malloc(sizeof(Pair));
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
969bfd4
Wed 10 May 2023 06:25:31 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
46fcd6b
Wed 10 May 2023 06:27:19 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
163a5a5
Fri 09 Jun 2023 03:59:22 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|5
total_score: 10/70
f7cf535
Fri 09 Jun 2023 04:06:59 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
2290c83
Fri 09 Jun 2023 04:11:58 PM UTC: 
 hashmap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  5|4
total_score: 30/70
7aff861
Fri 09 Jun 2023 04:19:03 PM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
e22e676
Fri 09 Jun 2023 04:19:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
9b6e2c8
Fri 09 Jun 2023 04:21:33 PM UTC: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  8|3
total_score: 40/70
915aa6a
Fri 09 Jun 2023 04:21:56 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
6c956c4
